<resources>
    <string name="app_name">FStyle Men Shoes</string>
    //Intro
    <string name="btn_next">Tiếp theo</string>
    <string name="tv_skip_into">Bỏ qua giới thiệu</string>
    <string name="tv_sign_in">Đăng nhập</string>
    <string name="tv_sign_up"><u>Đăng ký</u></string>
    <string name="edt_hint_email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_hint_password">Nhập mật khẩu</string>
    <string name="tv_no_account">Bạn chưa có tài khoản ?</string>
    <string name="tv_forgot_password">Quên mật khẩu ?</string>
    <string name="tv_check_password">Ghi nhớ đăng nhập</string>
    <string name="tv_hello">Chào mừng!</string>
    <string name="tv_not_null">Không được để trống</string>
    <string name="tv_login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="tv_register">Đăng ký</string>
    <string name="tv_create_account">Tạo tài khoản ngay</string>
    <string name="tv_phone">Số điện thoại</string>
    <string name="tv_new_password">Mật khẩu mới</string>
    <string name="tv_re_new_pass">Xác nhận mật khẩu mới</string>
    <string name="tv_new_pass">Xác nhận đổi mật khẩu mới</string>
    <string name="tv_your_order">Đơn hàng của bạn</string>
    <string name="tv_camera">Chụp ảnh</string>
    <string name="tv_image_from_gallery">Chọn ảnh từ thư viện</string>
    <string name="tv_choose_picture">Chọn ảnh</string>
    <string name="tv_favourite">Sản phẩm yêu thích</string>
    <string name="tv_edit_info">Sửa thông tin cá nhân</string>
    <string name="tv_log_out">Đăng xuất</string>
    <string name="tv_view_order">Xem danh sách đơn hàng của bạn</string>
    <string name="tv_view_favourite">Xem danh sách sản phẩm yêu thích</string>
    <string name="tv_view_address">Xem thông tin địa chỉ giao hàng</string>
    <string name="tv_address">Địa chỉ</string>
    <string name="tv_favourite_profile">Yêu thích</string>
    <string name="tv_my_order">Đơn hàng của bạn</string>
    <string name="tv_profile">Trang cá nhân</string>
    <string name="tv_new_address">Địa chỉ mới</string>
    <string name="tv_edit_address">Sửa địa chỉ</string>
    <string name="tv_contact_fstyle">Liên hệ FStyle</string>
    <string name="tv_my_address">Địa chỉ của tôi</string>
    <string name="tv_user_name">Tên người dùng</string>
    <string name="tv_add_address">Thêm địa chỉ</string>
    <string name="tv_edit_item_address">Sửa địa chỉ</string>
    <string name="tv_update_info">Để bảo vệ tài khoản của bạn, bạn có thể thay đổi mật khẩu và cập nhật thông tin cá nhân ở đây. Xin vui lòng điền vào các trường thông tin dưới đây và nhấn "Lưu thông tin" để hoàn tất quá trình.</string>
    <string name="tv_ask_for_question">Bạn có câu hỏi?</string>
    <string name="tv_admin_profile">Trang cá nhân quản lý</string>
    <string name="payment">Thanh toán</string>
    <string name="change_address">Đổi địa chỉ</string>
    <string name="default_notification_channel_name">Kênh thông báo FStyle</string>
    <string name="default_notification_channel_description">Chào mừng các bạn đến với kênh thông báo chính của FStyle - nơi cập nhật những giao dịch và ưu đãi độc quyền chỉ dành cho bạn!</string>
    <string name="default_notification_channel_id">primary_channel_id</string>
    <string name="content_size_shoe">Để đảm bảo bạn chọn đúng <b>kích thước giày</b>, hãy tham khảo bảng kích thước dưới đây. Hãy lưu ý rằng kích thước có thể thay đổi tùy theo thương hiệu và kiểu giày.</string>
    <string name="tv_order_history_pending">Đơn hàng %s của Quý khách đã được tạo lúc <b>%s</b> và đang được <b>Chờ xác nhận</b>. Cảm ơn Quý khách đã mua hàng tại ứng dụng FStyle.</string>
    <string name="tv_order_history_active">Đơn hàng %s của Quý khách đã được <b>Xác nhận</b> vào lúc <b>%s</b> và sẽ được đóng gói và vận chuyển cho Quý khách trong vài ngày tới. Cảm ơn Quý khách đã mua hàng tại ứng dụng FStyle.</string>
    <string name="tv_order_history_deactive">Đơn hàng %s của Quý khách đã <b>Bị hủy</b> vào lúc <b>%s</b> do gặp sự cố. Cảm ơn Quý khách đã mua hàng tại ứng dụng FStyle. Hẹn gặp lại Quý khách trong thời gian sắp tới!</string>
    <string name="tv_order_history_trading">Đơn hàng %s của Quý khách đã <b>Được bàn giao</b> cho bên vận chuyển vào lúc <b>%s</b>. Quý khách vui lòng nghe máy khi có nhân viên liên hệ giao hàng.</string>
    <string name="tv_order_history_delivered">Đơn hàng %s của Quý khách đã được đối tác bên vận chuyển xác nhận <b>Giao thành công</b> vào lúc <b>%s</b>. Cảm ơn Quý khách đã mua hàng tại ứng dụng FStyle.</string>
</resources>