<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIntro"
    tools:context=".src.view.user.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_ellipse" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/tv_hello"
                android:textColor="@color/tvHello"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/tv_login_to_continue"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_fstyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_medium"
                android:text="@string/tv_sign_in"
                android:textColor="@color/colorBlack"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/edt_hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:hintTextColor="@color/colorBlack"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/edt_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="end"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tv_forgot_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_finger_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đăng nhập sử dụng vân tay"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_fingerprint"
                android:drawablePadding="5dp"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:fontFamily="@font/inter_medium"
                />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounder_edit_text_brown"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:padding="15dp"
                android:text="Đăng nhập"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/tv_no_account"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/tv_sign_up"
                    android:textColor="@color/colorButtonBrown"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>