<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIntro"
    tools:context=".src.view.ForgotPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="20dp"
                android:src="@drawable/ic_arrow_left" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:textColor="@color/colorBlack"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/tv_forgot_password"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/edt_hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/tv_phone"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:hintTextColor="@color/colorBlack"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/tv_new_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:boxStrokeColor="@color/colorBlack"
                app:helperText="@string/tv_not_null"
                app:helperTextTextColor="@color/colorRed"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_edit_text"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/tv_re_new_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounder_edit_text_brown"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/tv_new_pass"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>