<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/avatar_bs_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_dismiss"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_dismiss"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:text="@string/tv_choose_picture"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1A000000" />


    <LinearLayout
        android:id="@+id/lnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_camera" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:text="@string/tv_camera"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_gallery" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:text="@string/tv_image_from_gallery"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>